--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-open",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Opens ember-cli application in the browser.",
   "directories": {
     "doc": "doc",
@@ -20,7 +20,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
     "ember-ajax": "0.7.1",
-    "ember-cli": "2.2.0-beta.6",
+    "ember-cli": "~2.2.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.1",
@@ -35,13 +35,13 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-resolver": "^2.0.3",
-    "ember-try": "~0.0.8"
+    "ember-try": "~0.0.8",
+    "ember-cli-babel": "^5.1.5"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.5",
     "opener": "^1.4.1",
     "clean-base-url": "^1.0.0"
   },
