--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-open",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Opens ember-cli application in the browser.",
   "directories": {
     "doc": "doc",
@@ -11,7 +11,10 @@
     "start": "ember server",
     "test": "echo 0;"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ro0gr/ember-cli-open"
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
