--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-internal-test-helpers": "ro0gr/ember-cli-internal-test-helpers#4f84ee6",
+    "ember-cli-internal-test-helpers": "ember-cli/ember-cli-internal-test-helpers",
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^2.0.0",
