--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "start": "ember server",
     "test": "mocha node_tests/**/*.js"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ro0gr/ember-cli-open.git"
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
