--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tmp
+**/dist
+**/tmp
 
 # dependencies
-/bin
-/node_modules
-/bower_components
+**/bin
+**/node_modules
+**/bower_components
 
 # misc
 /.sass-cache
@@ -17,5 +17,3 @@
 npm-debug.log
 testem.log
 /.vscode
-/test-target
-
