--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "mocha tests/*.js"
+    "test": "eslint . && mocha tests/*.js"
   },
   "main": "index.js",
   "files": [
@@ -29,6 +29,7 @@
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-eslint": "^3.0.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-internal-test-helpers": "ember-cli/ember-cli-internal-test-helpers",
