--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "mocha tests/*-test.js && eslint ."
+    "test": "mocha tests/*-test.js && eslint lib index.js"
   },
   "main": "index.js",
   "files": [
@@ -39,6 +39,7 @@
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
+    "execa": "^0.8.0",
     "fixturify": "^0.3.2",
     "loader.js": "^4.0.0",
     "mocha": "^2.4.5"
