--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ matrix:
   fast_finish: true
 
 before_install:
-  - "npm config set progress false"
-  - "npm i -g npm@^3"
+  - "npm i -g npm@5"
 
 install:
   - npm i -g bower
